--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Food World</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -26,6 +26,23 @@
         <div class="pro">
             <img src="images/female/Group 8425.png" alt="">
         </div>
+    </section>
+    <section class="second-top flexible-container">
+        <div class="pro">
+            <img src="images/female/Person Image.png" alt="">
+
+        </div>
+        <div class="pro">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+            <a class="link-btn" target="_blank" href="#"> CONTACT ME</a>
+
+        </div>
+
     </section>
 
 </body>
